# scalable-gaussian-hmm

./: .gitignore  README.md  notes.md  pyproject.toml  requirements.txt  setup.cfg
examples/: script_em_real_data.py  tmp_issue_hmm_not_recognized_as_pytree.py
notebooks/: 01_sem.ipynb
scripts/: compare_fullbatch_vs_stochastic_em.py  estimate_dl_iter.py  eval_kmeans_cluster_validity.py  fit_fish0_137.py  job_fit.sh  job_single_fish.sh  jobarray-hmm_states.sh  jobarray_hmm_single_fish.sh  make_fit_jobscript.py  make_job_fit.py  pmap_fit-fish0_137.py  profile_jmap.py  profile_pmap.py  script_pmap_single.py  stochastic_fit-fish0_137.py  time_one_epoch_em.py  timeit_pd_vs_h5py.py  tprof_dataloader.py  tprof_kmeans_variations.py
src/kf/: __init__.py  _legacy.py  data.py  data_utils.py  fit.py  fit_parallel_stem.py  hmm.py  inference.py  profile_parallel_stem.py  utils.py
src/kf/gaussian_hmm/: __init__.py  _algorithms.py  _initialization.py  _model.py  algorithms.py  model.py
tests/: _standard_em.py  script_em_real_data.py  test_data.py  test_data_utils.py  test_hmm.py  test_inference.py  test_partial_em.py  test_utils_checkpoint.py  test_utils_data.py  test_utils_kmeans.py  timeit_pd_vs_h5py.py
