[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "killifish"
description = "Whole-lifespan modelling of killifish behavior"
keywords = ["hmm", "stochastic em"]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
  {email = "eyz@stanford.edu"},
  {name = "Libby Zhang"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "dynamax @ git+https://github.com/probml/dynamax",
    "snax @ git+https://github.com/ezhang94/snax@checkpoint_ext",
    "h5py",
    "jax[cpu]",
    "optax>=0.1.3",
    "scikit-learn",
    "tensorflow-probability",
    "tqdm",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "memory-profiler",
]

[project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
repository = "https://github.com/ezhang94/killifish.git"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"