[metadata]
name = killifish
version = 0.0.1
author = Libby Zhang
author_email = eyz@stanford.edu
description = Whole-lifespan modelling of killifish behavior
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ezhang94/killifish
project_urls =
    Bug Tracker = https://github.com/ezhang94/killifish/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src